@@ -1,4 +1,5 @@
 AUX 60-frandom.rules 251 RMD160 7b16abc6979d57419fcfa2add3be7fefba58f697 SHA1 927b708ac0e3ac484020f526d8ea056267e9a925 SHA256 2f8063c6429706468b9bd602273179fd33fb7a02483d2b916d54cdb32ad56600
 DIST frandom-1.0.tar.gz 15827 RMD160 8f24d823a506c06f91c88caedd21c95b49b29831 SHA1 bb0127c88ae266b04d13e710a5b979b3d4a59df7 SHA256 77d27b03226e5e2207b208b44b9e491949741e0b3ed06a2e9e531162aacc9ee9
-EBUILD frandom-1.0.ebuild 718 RMD160 f78a846901158739d1fbfc51ef1b6c1894c352e2 SHA1 646593bf85cdf1962f12f5f4a04790120a285112 SHA256 3ec2ed9d813a18edce1b6bb53fc9bda788f6b9d51e3289edb336ee7850069ed4
-MISC ChangeLog 366 RMD160 bdeda9cf8ac20c80e88f4ddf9e3ebab375e39897 SHA1 9f6569581d169b4db3918402e00843ebad04436a SHA256 56ae4b8b33846ddb59f27993dc692e036b1aff400304d45a9e317480ff78ed34
+EBUILD frandom-1.0.ebuild 717 RMD160 14b7fd07cc50095137aea2c7b317e3e01e7d0abd SHA1 dac2a1630599e00dcb5d02ae5644079613137b35 SHA256 f0a2b5a492313698dd7876ededcd79c696376c1920bf4da21106ffc9c2a75194
+MISC ChangeLog 504 RMD160 fe2f49ff0f3b29b433147391aeca68100806e51c SHA1 a097aacf5caec4b6a4e9f8980a63520c074db4d3 SHA256 42373684fc45717488ca57998b7b615e5a35f43576569e41711e997d6ee7faac
+MISC metadata.xml 252 RMD160 98e581e345ae7649474731426f74795781bbd896 SHA1 da5d32bd96683be482b926f921805e8cc754f619 SHA256 261fa9fd2ee52f8b5898f381128b854fa20f980d551bc2b6fbabd501f3f01036
